--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         width="400">
 
         <div class="botão">
-            <a href="login.html">CADASTRE-SE</a>
-            <a href="cadatro.html">ENTRE</a>
+            <a href="login.html">ENTRE</a>
+            <a href="cadastro.html">CADASTRO</a>
         </div>
+
+        <img src="img/quadra 4.jfif" alt="quadra de basquete 3x3.">
     </div>
 </body>
 </html>
