--- a/pagina.html
+++ b/pagina.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="estilo.css">
+    <title>PAGINA INICIAL</title>
 </head>
-<body>
-    <div class="fundo-pag-inicial">
-        <img src="img/3x3.jfif" alt="">
-        <img src="" alt="">
+<body class="pagina"> 
+    <div class="perfil">
+        <a href="perfil.html">
+        <img src="img/perfil.png" alt=""></a>
     </div>
-    
+    <div class="fiba">
+        <img src="img/FIBA 3x3 White Version.png" alt=""></a>
+        
+    </div>
 </body>
 </html>
