--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
     <p>SENHA</p>
     <input type="passoword" name="senha">
     <br>
-    <a href="pagina.html">ENTRAR</a>
+    <a href="">ENTRAR</a>
 
    </div>
     
