--- a/pagina.html
+++ b/pagina.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
-    <title>PAGINA INICIAL</title>
+    <title>Document</title>
 </head>
 <body class="pagina"> 
     <div class="perfil">
-        <a href="perfil.html">
-        <img src="img/perfil.png" alt=""></a>
+        <img src="img/perfil.png" alt="">
     </div>
     <div class="fiba">
-        <img src="img/FIBA 3x3 White Version.png" alt=""></a>
+        <img src="img/FIBA 3x3 White Version.png" alt="">
         
     </div>
 </body>
