--- a/cadastro.html
+++ b/cadastro.html
@@ -20,7 +20,7 @@
             <input type="password" name="criarsenha">
             <br>
 
-            <a href="pagina.html">CRIAR</a>
+            <a href="">CRIAR</a>
         </div> 
 
     
